--- a/contrib/provisioning/roles/cuttlefish-app/templates/env.j2
+++ b/contrib/provisioning/roles/cuttlefish-app/templates/env.j2
@@ -4,6 +4,8 @@ POSTFIX_SMTP_PORT=25
 POSTFIX_SMTP_HOST=localhost
 CUTTLEFISH_DOMAIN={{ cuttlefish_domain }}
 CUTTLEFISH_BOUNCE_EMAIL=bounce@{{ cuttlefish_domain }}
+CUTTLEFISH_SENDER_EMAIL=sender@{{ cuttlefish_domain }}
+DEVISE_EMAILS_FROM=cuttlefish@{{ cuttlefish_domain }}
 CUTTLEFISH_DOMAIN_CERT_CHAIN_FILE={{ cuttlefish_cert }}
 CUTTLEFISH_DOMAIN_PRIVATE_KEY_FILE={{ cuttlefish_private_key }}
 DISABLE_SSL={{ disable_ssl }}
