--- a/contrib/provisioning/roles/cuttlefish-app/templates/env.j2
+++ b/contrib/provisioning/roles/cuttlefish-app/templates/env.j2
@@ -9,6 +9,7 @@ DEVISE_EMAILS_FROM=cuttlefish@{{ cuttlefish_domain }}
 CUTTLEFISH_DOMAIN_CERT_CHAIN_FILE={{ cuttlefish_cert }}
 CUTTLEFISH_DOMAIN_PRIVATE_KEY_FILE={{ cuttlefish_private_key }}
 DISABLE_SSL={{ disable_ssl }}
+SIDEKIQ_WORKERS={{ sidekiq_workers }}
 
 # Rails setup
 SECRET_KEY_BASE={{ secret_key_base }}
