--- a/contrib/provisioning/roles/cuttlefish/templates/cuttlefish.conf.j2
+++ b/contrib/provisioning/roles/cuttlefish/templates/cuttlefish.conf.j2
@@ -20,8 +20,10 @@ server {
     ssl_session_cache shared:SSL:50m;
     ssl_session_tickets off;
 
+{% if use_dhparam -%}
     # Diffie-Hellman parameter for DHE ciphersuites, recommended 2048 bits
-    #ssl_dhparam /path/to/dhparam.pem;
+    ssl_dhparam /etc/ssl/private/dhparam.pem;
+{% endif %}
 
     # modern configuration. tweak to your needs.
     ssl_protocols TLSv1.2;
