Splash screen is boring

--- a/contrib/provisioning/roles/cuttlefish/templates/cuttlefish.conf.j2
+++ b/contrib/provisioning/roles/cuttlefish/templates/cuttlefish.conf.j2
@@ -40,6 +40,10 @@ server {
 
     root /home/cuttlefish/public;
 
+    location = / {
+        return 302 https://{{ cuttlefish_domain }}/dash;
+    }
+
     location ^~ /assets/ {
         gzip_static on;
         expires max;
